Extended and corrected the "Retrieve-score" functionality of the helper page to display a small table containing the best scores from each game including the usernames of the player that scored them. The scores are sorted and retrieved from the database inside the views and passed to the template as a set containing the username and score. Used a bootstrap table to display the results with outer borders rounded but colourless and inner borders thin and white. Changed the previous leaderboard to use the new bootstrap table as well and follow the same style. Updated the javascript file to include functionality to display and update the two tables. Changed the shade and padding of the background panel on all pages extending base.html to allow more space on smaller screens.

--- a/mainFDM/static/mainFDM/css/custom.css
+++ b/mainFDM/static/mainFDM/css/custom.css
@@ -30,9 +30,10 @@ body {
     min-height: 60rem; /*this causes the page to scroll*/
 }
 
-#helper, #base{
-    background-color: white;
+#base{
+    background-color: #ffffff;
     min-height: 35rem;
+    margin-inline: 0;
 }
 
 .navbar {
@@ -97,7 +98,8 @@ body {
     text-shadow: 0 8px 4px #212026;
 }
 
-#helper-header{
+/*Header text on each of the pages extending base*/
+#header{
     font-size: 4rem;
     font-weight: 300;
     color: #1daded;
@@ -105,6 +107,7 @@ body {
     text-shadow: 0 6px 6px #212026;
 }
 
+/*Home page intro to the programmes*/
 #intro{
     font-style: normal;
     font-weight: 600;
@@ -118,8 +121,6 @@ body {
 .jumbotron .container {
   max-width: 100%;
 }
-
-
 /*.form-select:focus{
     border-color: #FF0000;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.3);
@@ -151,10 +152,15 @@ body {
     border-radius: 30px;
     background-clip: border-box;
     margin-bottom: 20px;
-    box-shadow:
-            0.2rem 0.2rem 0.55rem 0.1rem rgb(21, 65, 200),
-            0.5rem 0.5rem 0.55rem 0.1rem rgb(136,32,187);
+    min-width: fit-content;
+    /*box-shadow:*/
+    /*        0.2rem 0.2rem 0.55rem 0.1rem rgb(21, 65, 200),*/
+    /*        0.5rem 0.5rem 0.55rem 0.1rem rgb(136,32,187);*/
     /* horizontal offset, vertical offset, blur radius, spread radius, colour */
+
+    /*FDM's blue on black shadow*/
+    -webkit-box-shadow: 0 0 25px 0 #202025, 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 25px 0 #202025, 0 20px 25px 0 rgba(0,0,0,.2);
 }
 
 #login-form-col,#register-form-col{
@@ -185,17 +191,10 @@ body {
     font-weight: 300;
 }
 
-#get-h-score{
+#get-b-score{
     font-size: 1.3rem;
     padding-inline: 15%;
     font-weight: 300;
-}
-
-#h-score{
-   text-align: center;
-    height: 2.7rem;
-    box-shadow: none;
-    border: none
 }
 
 #success{
@@ -230,6 +229,28 @@ body {
     border-top: 1px solid #FFFFFF;
     border-bottom: 1px solid #FFFFFF;
     color: #FFFFFF;
+}
+
+.table{
+    /*background: linear-gradient(40deg,#1541c8 0,#8820bb 100%);*/
+    background: #202025;
+    color: #FFFFFF;
+    border-collapse: collapse;
+    border-style: hidden;
+    margin-inline: auto;
+    max-width: fit-content;
+    word-wrap: break-word;
+    border-radius: 20px;
+}
+
+.table-head{
+    border-bottom: 2px solid #FFFFFF;
+    /*word-break: keep-all;*/
+}
+
+.table-row{
+    /*background: linear-gradient(45deg, #1541c8 50%,#8820bb 50%);*/
+    /*border-bottom: None;*/
 }
 
 .card{
@@ -307,6 +328,7 @@ body {
     display: block;
     max-width: max-content;
     padding-inline: 20px;
+    text-decoration: none;
 }
 
 #licence{
